CA legislation data, rspec and  swagger
